--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <body>
         <h1>Olá, Mundo!</h1>
         <p> Essa é minha primeira página em html.</p>
+                
+        <img src="https://picsum.photos/200" alt="Imagem Aleatória">
+        <!-- Imagem gerada aleatoriamente pelo site picsum.photos -->
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, ut nulla illum ad sequi, perspiciatis, laborum est vitae officiis voluptatum sit culpa? A, harum. Eos eveniet esse explicabo debitis aliquid.</p>
+        <!-- texto gerado aleatoriamente pelo comando "lorem"-->
+
+
     </body>
 </html>
